--- a/views/person_new.erb
+++ b/views/person_new.erb
@@ -1,9 +1,9 @@
 <h3>Welcome to Sinatra! Today is LAB</h3>
-<form action="/submit" method="POST">
-	<input type="text" name="current_person[name]" value="Enter Person Name" />
-  <input type="date" name="current_person[date_of_birth]" value="Enter birthday" />
-	<input type="text" name="current_person[gender]" value="Enter Person Gender" />
-	<input type="number" name="current_person[zipcode]" value="Enter Zipcode" />
+<form action="/submit_p" method="POST">
+	Name:<input type="text" name="current_person[name]" value="Enter Person Name" />
+  Birthday:<input type="date" name="current_person[date_of_birth]" value="Enter birthday" />
+	Gender:<input type="text" name="current_person[gender]" value="Enter Person Gender" />
+	Zipcode:<input type="number" name="current_person[zipcode]" value="Enter Zipcode" />
 
 	<input type="submit" value="Submit" />
 </form>
