--- a/views/event.erb
+++ b/views/event.erb
@@ -9,4 +9,4 @@
 	</li>
 <% end %>
 </ol>
-<a href="/">Hello go back to add a new one!</a>
+<a href="/event/new">Hello go back to add a new event!</a>
