--- a/views/person.erb
+++ b/views/person.erb
@@ -12,4 +12,4 @@
 	</li>
 <% end %>
 </ol>
-<a href="/">Hello go back to add a new one!</a>
+<a href="/person/new">Hello go back to add a new person!</a>
