--- a/views/registration.erb
+++ b/views/registration.erb
@@ -10,4 +10,4 @@
 	</li>
 <% end %>
 </ol>
-<a href="/">Hello go back to add a new one!</a>
+<a href="/registration/new">Hello go back to add a new registration!</a>
