--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,5 @@
 <h3>Welcome to Sinatra! Today is LAB</h3>
-<form action="/submit" method="POST">
-	<input type="text" name="current_person[name]" value="Enter Person Name" />
-  <input type="date" name="current_person[date_of_birth]" value="Enter birthday" />
-	<input type="text" name="current_person[gender]" value="Enter Person Gender" />
-	<input type="number" name="current_person[zipcode]" value="Enter Zipcode" />
-
-	<input type="submit" value="Submit" />
-</form>
+<p>Hello!Nice to meet you!</p>
+<a href="/event/new">Let's add a new event!</a>
+<a href="/person/new">Let's add a new person!</a>
+<a href="/registration/new">Let's add a new registration!</a>
