--- a/views/registration_new.erb
+++ b/views/registration_new.erb
@@ -2,7 +2,10 @@
 <form action="/submit_r" method="POST">
 	Person_id:<input type="number" name="current_registration[person_id]" value="Enter person_id" />
   Event_id:<input type="number" name="current_registration[event_id]" value="Enter event_id" />
-	Status:<input type="text" name="current_registration[status]" value="Enter Registration Status" />
-
+  Status:<select type="text" name="current_registration[status]">
+    <option value="coming">coming</option>
+    <option value="not coming">not coming</option>
+    <option value="maybe">maybe</option>
+  </select>
 	<input type="submit" value="Submit" />
 </form>
