--- a/views/event_new.erb
+++ b/views/event_new.erb
@@ -1,7 +1,8 @@
-<h3>Welcome to Sinatra! Today is LAB</h3>
+<h3>Welcome to Sinatra! Please add an event!</h3>
 <form action="/submit_e" method="POST">
 	Event Name:<input type="text" name="current_event[name]" value="Enter Event Name" />
   Event Date:<input type="date" name="current_event[date]" value="Enter Event Date" />
 
 	<input type="submit" value="Submit" />
 </form>
+<a href="/">Go back to homepage!</a>
