--- a/views/person_new.erb
+++ b/views/person_new.erb
@@ -1,4 +1,4 @@
-<h3>Welcome to Sinatra! Today is LAB</h3>
+<h3>Welcome to Sinatra! Please add a person!</h3>
 <form action="/submit_p" method="POST">
 	Name:<input type="text" name="current_person[name]" value="Enter Person Name" />
   Birthday:<input type="date" name="current_person[date_of_birth]" value="Enter birthday" />
@@ -7,3 +7,4 @@
 
 	<input type="submit" value="Submit" />
 </form>
+<a href="/">Go back to homepage!</a>
