--- a/views/registration_new.erb
+++ b/views/registration_new.erb
@@ -1,4 +1,4 @@
-<h3>Welcome to Sinatra! Today is LAB</h3>
+<h3>Welcome to Sinatra! Please add a registration!</h3>
 <form action="/submit_r" method="POST">
 	Person_id:<input type="number" name="current_registration[person_id]" value="Enter person_id" />
   Event_id:<input type="number" name="current_registration[event_id]" value="Enter event_id" />
@@ -9,3 +9,4 @@
   </select>
 	<input type="submit" value="Submit" />
 </form>
+<a href="/">Go back to homepage!</a>
